Backport more features from 1.15